# learn_llm

./: .gitignore  CLAUDE.md
stage1_python/: pyproject.toml
stage1_python/day10_async_eco/: README.md  solution.py
stage1_python/day11_pydantic/: README.md  solution.py
stage1_python/day12_concurrency/: README.md  solution.py
stage1_python/day13_engineering/: README.md  main.py  pyproject.toml  test_toolkit.py  toolkit.py
stage1_python/day14_url_health/: README.md  pyproject.toml  solution.py  test_solution.py  urls.txt
stage1_python/day1_decorator/: main.py  pyproject.toml  solution.py
stage1_python/day2_retry/: README.md  main.py  pyproject.toml  solution.py
stage1_python/day3_generator/: README.md  main.py  pyproject.toml  solution.py
stage1_python/day4_iterator/: README.md  main.py  pyproject.toml  solution.py
stage1_python/day5_context/: README.md  main.py  pyproject.toml  solution.py
stage1_python/day6_magic/: README.md  main.py  pyproject.toml  solution.py
stage1_python/day7_week1_review/: README.md  demo.py  main.py  pyproject.toml  tinylog.py
stage1_python/day8_asyncio_basic/: README.md  pyproject.toml  solution.py
stage1_python/day9_async_advanced/: README.md  pyproject.toml  solution.py  solution_crawler.py
stage2_backend/day15_fastapi_basics/: README.md  main.py  pyproject.toml  solution.py
stage2_backend/day16_pydantic_depends/: README.md  pyproject.toml  solution.py
stage2_backend/day17_middleware_exception_cors/: README.md  main.py  pyproject.toml
学习路线/: 学习总结.md  学习清单.md  学习记录.md  当前断点.md
(+3 files in other folders)
