[project]
name = "stage1-python"
version = "0.1.0"
description = "Stage 1: Python advanced topics (decorator / generator / async / etc.)"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
]

[tool.uv.workspace]
members = [
    "day13_engineering",
]
